--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "laravel-mix": "^5.0.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
